fix: Correct nav from being covered on Safari

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,7 +23,6 @@ body {
 
 // nav
 nav {
-  overflow: hidden;
   position: fixed;
   top: 0;
   width: 100%;
